# PhoneixClaw

./: .dockerignore  .env.coolify.example  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT.md  DISCORD_TOKEN_GUIDE.md  IMPLEMENTATION_NOTES_A8.md  Makefile  PRD.md  README.md  SETUP.md  alembic.ini  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.seed.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  w-phoenix-cutover-2026-05-04.md
.claude/agents/: atlas-architect.md  build.md  cortex-reviewer.md  devin-dev.md  feature.md  fixbug.md  helix-release.md  nova-pm.md  quill-qa.md
.github/: copilot-instructions.md
.github/agents/: atlas-architect.agent.md  build.agent.md  cortex-reviewer.agent.md  devin-dev.agent.md  feature.agent.md  fixbug.agent.md  helix-release.agent.md  nova-pm.agent.md  quill-qa.agent.md
.github/workflows/: cd.yml  ci.yml
agents/: install_vps.sh
agents/analyst/: analyst_agent.py
agents/backtesting/: CLAUDE.md
agents/live-template/: CLAUDE.md  config.json
agents/polymarket/: __init__.py
agents/schema/: characters.json  manifest.schema.json  validate_manifest.py
alembic/: env.py
apps/api/: Dockerfile  entrypoint.sh  requirements.txt
apps/dashboard/: index.html  package-lock.json  (+4 more)
doc_claude/: 02_architecture.md
docs/: Phoenix_Complete_Architecture.html  Phoenix_Complete_Architecture.md  analyst-agent-prd.md  architecture-agents-tab-fix.md  architecture-skills-tab.md  ottersummary  prd-agents-tab-fix.md  prd-skills-tab.md
infra/: docker-compose.production.yml  nginx.conf
k8s/: ingress.yaml
newdocs/: ArchitecturePlan.md  ImplementationPlan.md  Milestones.md  PRD.md  newflow.txt
presentation/: phoenix-detailed-report.html  presentation.html
scripts/: backfill_daily_bars.py  cleanup_data_dir.py  cleanup_dlq.py  coolify-deploy-via-ssh.sh  docker_migrate.py  go_live_regression.sh  init.sh  init_db.py  promote_admin.py  register_openclaw_instance.py  replay_dlq.py  smoke_go_live_api.sh  verify_agents_e2e.py  verify_snowflake_cutover.py
seed/: .gitignore  README.md  load_to_channel_messages.py  load_to_postgres.py
services/: __init__.py
shared/: dedup.py  feature_flags.py  graceful_shutdown.py  integration_keys.py  metrics.py  pricing.py  rate_limiter.py  requirements-base.txt  retention.py  retry.py
tests/: TEST_SUITES.md  orchestration_test_report.md  test_trading_vision_e2e.py
tools/: __init__.py  archive_old_messages.py  backfill.py  coverage_audit.py  naming_audit.py
(+1282 files in other folders)
